--- a/style.css
+++ b/style.css
@@ -960,6 +960,16 @@ nav .fas {
     font-size: 18px;
   }
 
+  .skillcard h3 {
+    font-size: 12px;
+  }
+
+  .skillcard img {
+    margin: 4px 14px 10px;
+    width: 40px;
+    height: 40px;
+  }
+
   .services-list div {
     max-width: 100%;
   }
